--- a/public/game.html
+++ b/public/game.html
@@ -575,7 +575,7 @@
         const img = document.createElement('img');
         img.className = 'mine-img';
         // use a project asset (SVG) that has a transparent background
-          img.src = '/assets/img/mine.svg';
+          img.src = '/assets/img/bomb.jpg';
           img.alt = 'mine';
           img.onerror = function(){
             try{ if(this.src && this.src.indexOf('bomb.jpg') === -1) this.src = '/assets/img/bomb.jpg'; }
