update home page

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,9 @@
     <header class="hero card">
       <div>
         <div class="title">ChessNut</div>
-        <div class="subtitle">Créez ou rejoignez une partie — rapide, simple et fun 🎯</div>
+        <div class="subtitle">Créez ou rejoignez une partie</div>
       </div>
       <div style="text-align:right">
-        <div class="muted">Invite your friends — play together</div>
         <img class="decor" src="/assets/chess-pieces/boards/8x8_pink_1Kbyte_gambit.svg" alt="decor" />
       </div>
   <svg class="floating-piece" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path fill="#0b1220" d="M10 90 L30 10 L50 90 Z" /></svg>
