--- a/public/game.html
+++ b/public/game.html
@@ -72,7 +72,9 @@
     function cardRequiresTarget(cardId){
       if(!cardId) return null;
       const id = String(cardId).toLowerCase();
-      if(id.indexOf('mine') !== -1) return 'empty';
+  if(id.indexOf('mine') !== -1) return 'empty';
+  // kamikaz targets one of your pieces (play card, then choose a piece)
+  if(id.indexOf('kamikaz') !== -1) return 'owned';
       if(id.indexOf('rebond') !== -1) return 'owned';
       if(id.indexOf('adoub') !== -1) return 'owned';
       if(id.indexOf('folie') !== -1 || id.indexOf('fou') !== -1) return 'owned';
