--- a/public/game.html
+++ b/public/game.html
@@ -75,6 +75,7 @@
   if(id.indexOf('mine') !== -1) return 'empty';
   // kamikaz targets one of your pieces (play card, then choose a piece)
   if(id.indexOf('kamikaz') !== -1) return 'owned';
+  if(id.indexOf('invis') !== -1 || id.indexOf('invisible') !== -1) return 'owned';
       if(id.indexOf('rebond') !== -1) return 'owned';
       if(id.indexOf('adoub') !== -1) return 'owned';
       if(id.indexOf('folie') !== -1 || id.indexOf('fou') !== -1) return 'owned';
